[tool.poetry]
name = "most-recent-file"
version = "0.1.0"
description = "Print out the most recent file from the given paths"
authors = ["Aatif Syed <aatifsyedyp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "^1.12.3"
GitPython = "^3.1.18"
more-itertools = "^8.8.0"
poetry-version = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.6b0"
ipython = "^7.25.0"
mypy = "^0.910"
pylint = "^2.9.1"
ipykernel = "^6.0.0"
hypothesis = "^6.14.0"

[tool.poetry.scripts]
# most-recent-file = 'most_recent_file:cli'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
